Added Register heading 2

--- a/register.html
+++ b/register.html
@@ -6,6 +6,8 @@
     <title>Register page</title>
 </head>
 <body>
-    
+    <h1>Register Here</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas expedita labore harum odit voluptatibus eligendi quod earum minus sunt error, velit minima recusandae beatae voluptates vero quibusdam voluptatum quos a.</p>
+    <h2>Changing commit message</h2>
 </body>
 </html>
